[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "effecthandlers"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "attrs",
]

[tool.setuptools.dynamic]
version = {attr = "effecthandlers.__version__.__version__"}

[tool.isort]
profile = "black"
multi_line_output = 3
skip = "__init__.py"
